# QtUsbStorageInfo

./: CMakeLists.txt  LICENSE  QtUsbStorageInfo.pri  README.md
include/: QtUsbStorageInfo.h
src/: QtUsbStorageInfo.cpp  QtUsbStorageInfo_android.cpp  QtUsbStorageInfo_ios.mm  QtUsbStorageInfo_linux.cpp  QtUsbStorageInfo_mac.cpp  QtUsbStorageInfo_win.cpp
